--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <p>
 	<b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> To Appear </br>
 	<font color=a92b13>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
-	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>), 2022
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>, research track), 2022
 </p>
 	
 <p>
@@ -154,7 +154,7 @@
 <p>
 	<b>Fairness-Aware Online Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
-	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>), 2021
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>, research track), 2021
 </p>
 
 <p>
