--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on Dec. 15, 2021<br>
+				<p align="right"><font size="2">Last Updated on May 24, 2022<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
