--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <h2>Publications</h2>
 
 <p>
-	<b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> To Appear </br>
+	<b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
 	<font color=a92b13>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>, research track), 2022
 </p>
