--- a/index.html
+++ b/index.html
@@ -133,80 +133,80 @@
 <h2>Publications</h2>
 
 <p>
-	<b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
+	<strong>[KDD'22]</strong> <b>Adaptive Fairness-Aware Online Meta-Learning for Changing Environments.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
 	<font color=a92b13>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>, research track), 2022
 </p>
 	
 <p>
-	<b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
+	<strong>[PAKDD'22]</strong> <b>Layer Adaptive Deep Neural Networks for Out-of-distribution Detection.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
 	Haoliang Wang, <font color=a92b13>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
 	<em>The 26th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em> (<strong>PAKDD</strong>), 2022
 </p>
 
 <p>
-	<b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
+	<strong>[AAAI'21]</strong> <b>A Nested Bi-level Optimization Framework for Robust Few-Shot Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
 	<em>AAAI Conference on Artificial Intelligence</em> (<strong>AAAI</strong>), 2022, <em>and</em> <br/> 
 	<em>NeurIPS Workshop on MetaLearn</em> (<strong>NeurIPS-w</strong>), 2021
 </p>
 
 <p>
-	<b>Fairness-Aware Online Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
+	<strong>[KDD'21]</strong> <b>Fairness-Aware Online Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>KDD</strong>, research track), 2021
 </p>
 
 <p>
-	<b>VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning.</b> <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">PDF</a></br>
+	<strong>[ICBC'21]</strong> <b>VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning.</b> <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">PDF</a></br>
 	Feng Mi, Zhuoyi Wang, <font color=a92b13>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency</em> (<strong>ICBC</strong>), 2021
 </p>
 
 <p>
-	<b>CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining.</b> <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
+	<strong>[WWW'21]</strong> <b>CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining.</b> <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
 	Zhuoyi Wang, Yuqiao Chen, <font color=a92b13>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
 	<em>In Proceedings of the ACM International World Wide Web Conference</em> (<strong>WWW</strong>), 2021
 </p>
 
 <p>
-	<b>PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
+	<strong>[ArXiv preprint]</strong> <b>PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning.</b> <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 	<em>ArXiv preprint, 2009.12675v2</em>, 2020
 </p>
 
 <p>
-	<b>A Primal-Dual Subgradient Approach for Fair Meta Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
+	<strong>[ICDM'20]</strong> <b>A Primal-Dual Subgradient Approach for Fair Meta Learning.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>ICDM</strong>), 2020
 </p>
 
 <p>
-	<b>Fair Meta-Learning for Few-Shot Classification.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
+	<strong>[ICKG'20]</strong> <b>Fair Meta-Learning for Few-Shot Classification.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em> (<strong>ICKG</strong>), 2020 
 </p>
 
 <p>
-	<b>Unfairness Discovery and Prevention for Few-Shot Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">PDF</a></br>
+	<strong>[ICKG'20]</strong> <b>Unfairness Discovery and Prevention for Few-Shot Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em> (<strong>ICKG</strong>), 2020 
 </p>
 
 <p>
-	<b>Rank-Based Multi-task Learning for Fair Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
+	<strong>[ICDM'19]</strong> <b>Rank-Based Multi-task Learning for Fair Regression.</b> <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em> (<strong>ICDM</strong>), 2019
 </p>
 
 <p>
-	<b>CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
+	<strong>[Development]</strong> <b>CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
 	Jingjing Li, Lianjie Miao, <font color=a92b13>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
 	<strong>Development</strong>, 147-173, 2017 
 </p>
 
 <p>
-	<b>Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">PDF</a></br>
+	<strong>[Development]</strong> <b>Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation.</b> <a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">PDF</a></br>
 	<font color=a92b13>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
 	<strong>Development</strong>, 141(2):281-95, 2014
 </p>
