--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
 	    <li type="circle">[06/2022] I will serve as a Editorial Board Member of American Journal of Data Mining and Knowledge Discovery (AJDMKD) 2022-2024.</li>
 	    <li type="circle">[05/2022] I will serve as a PC member for CIKM 2022.</li>
+	    <li type="circle">[07/2022] I was invited to give an academic talk by Tianjin University, Smart Society and Big Data Intelligence Lab </li>
 	    <li type="circle">[05/2022] One paper was accepted by ACM SIGKDD 2022 (research track). </li>
 	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
 	    <li type="circle">[03/2022] I will serve as a PC member for IEEE ICDM 2022.</li>
@@ -245,6 +247,7 @@
 <h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
+		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
 		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (Invited talk).</li>
 		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
