--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
 	    <li type="circle">[01/2022] I will serve as a reviewer for the journal of Frontiers in Big Data. </li>
 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
+	    <li type="circle">[11/2021] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
 	    <li type="circle">[11/2021] I will serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany. </li>
 	    <li type="circle">[10/2021] I will serve as a PC member for AAAI 2022.</li>
