--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[05/2022] I will serve as a reviewer for WACV 2023.</li>
 	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
 	    <li type="circle">[06/2022] I will serve as a Editorial Board Member of American Journal of Data Mining and Knowledge Discovery (AJDMKD) 2022-2024.</li>
 	    <li type="circle">[05/2022] I will serve as a PC member for CIKM 2022.</li>
@@ -219,6 +220,7 @@
 <h2>Academic Services</h2>
   <h4>Conference</h4>
     	<ul>
+		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
