--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[07/2022] I am selected as a mentor at the Undergraduate Consortium at KDD 2022.</li>
 	    <li type="circle">[07/2022] I will serve as a reviewer for WACV 2023.</li>
 	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
 	    <li type="circle">[06/2022] I will serve as a Editorial Board Member of American Journal of Data Mining and Knowledge Discovery (AJDMKD) 2022-2024.</li>
@@ -224,7 +225,7 @@
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks, Mentor at KDD-UC] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020, 2021, 2022.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining  (SDM) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
