--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of IEEE Transactions on Software Engineering.</li>
 	    <li type="circle">[07/2022] I am selected as a mentor at the Undergraduate Consortium at KDD 2022.</li>
 	    <li type="circle">[07/2022] I will serve as a reviewer for WACV 2023.</li>
 	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
@@ -242,6 +243,7 @@
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
+		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering, 2022. </li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022. </li>
 		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science, 2022. </li>
