--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
-		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering, 2022. </li>
+		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022. </li>
 		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science, 2022. </li>
