--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of Springer Machine Learning.</li>
-	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of IEEE Transactions on Software Engineering.</li>
+	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li>
+	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of Springer Machine Learning (MACH).</li>
+	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of IEEE Transactions on Software Engineering (TSE).</li>
 	    <li type="circle">[07/2022] I am selected as a mentor at the Undergraduate Consortium at KDD 2022.</li>
 	    <li type="circle">[07/2022] I will serve as a reviewer for WACV 2023.</li>
 	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
@@ -244,6 +245,7 @@
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
+		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
