--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li>
 	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of Springer Machine Learning (MACH).</li>
 	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of IEEE Transactions on Software Engineering (TSE).</li>
@@ -238,10 +239,11 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
+		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>] AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
-		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>, Reviewer] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on EAI (KDD-w)</a> 2022.</li>
-		<li type="disc"> [Reviewer] WACV 2022 Workshop on DNOW (WACV-w) 2022.</li>
-		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning (NeurIPS-w) 2021.</li>
+		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical AI</a>.</li>
+		<li type="disc"> [Reviewer] WACV 2022 Workshop on Dealing with Novelty in Open Worlds.</li>
+		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
