--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
-		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>] AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
+		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
-		<li type="disc"> [<font color=a92b13>Main Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical AI</a>.</li>
+		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical AI</a>.</li>
 		<li type="disc"> [Reviewer] WACV 2022 Workshop on Dealing with Novelty in Open Worlds.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
@@ -275,10 +275,10 @@
   <h4>The State University of New York at Albany</h4>
 	<ul>
 		<li type="disc">Spring 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
-		<li type="disc">Spring 2022, Fall 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
-		<li type="disc">Spring 2018, Fall 2018, Spring 2019, Teaching Assistant, ICSI 500 Operating Systems. </li>
+		<li type="disc">Fall 2022, Spring 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
+		<li type="disc">Spring 2019, Fall 2018, Spring 2018, Teaching Assistant, ICSI 500 Operating Systems. </li>
 		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
-		<li type="disc">Fall 2015, Spring 2016, Fall 2016, Teaching Assistant, ICSI 201 Introduction of Computer Science. </li>
+		<li type="disc">Fall 2016, Spring 2016, Fall 2015, Teaching Assistant, ICSI 201 Introduction of Computer Science. </li>
 	</ul>
   <h4>The University of Texas at Dallas</h4>
 	<ul>
