--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
 	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li>
 	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of Springer Machine Learning (MACH).</li>
@@ -247,6 +248,7 @@
 	</ul>
   <h4>Journal Reviewer</h4>
     	<ul>
+		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
