--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
 	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li>
@@ -260,6 +261,7 @@
 
 <h2>Academic Talks</h2>
 	<ul>
+		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (Invited talk).</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
 		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (Invited talk).</li>
@@ -316,7 +318,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on August 1, 2022<br>
+				<p align="right"><font size="2">Last Updated on November, 2022<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
