--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg TX </li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
 	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
@@ -121,7 +122,7 @@
 	    <li type="circle">[01/2022] I will serve as a PC member for AutoML Conference 2022. </li>
 	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
 	    <li type="circle">[01/2022] I will serve as a reviewer for the journal of Frontiers in Big Data. </li>
-	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
+<!-- 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
 	    <li type="circle">[11/2021] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
 	    <li type="circle">[11/2021] I will serve as a PC member for ACM SIGKDD 2022. </li>
 	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany. </li>
@@ -138,7 +139,7 @@
 	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021 (research track). </li>
 	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
 	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
-	    <li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li>
+	    <li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li> -->
     </ul><br>
 
 
@@ -261,17 +262,18 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (Invited talk).</li>
+		<li type="disc">11/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=a92b13>Invited talk</font>).</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
-		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
-		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (Invited talk).</li>
-		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (Invited talk).</li>
+		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (<font color=a92b13>Invited talk</font>).</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
 		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
 		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China.</li>
 		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster presentation).</li>
-		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
+		<li type="disc">04/2015: Shaker High School, Latham NY, USA (<font color=a92b13>Invited talk</font>).</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
 	</ul>
 
