--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
-		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
+		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
-		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical AI</a>.</li>
+		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical Artificial Intelligence: Methods and Applications</a>.</li>
 		<li type="disc"> [Reviewer] WACV 2022 Workshop on Dealing with Novelty in Open Worlds.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
