--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg TX </li>
+	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg CO </li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
 	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
