--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[11/2022] I will serve as a reviewer for WACV 2023 Workshop on DNOW.</li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg CO </li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
@@ -245,7 +246,7 @@
 		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
 		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical Artificial Intelligence: Methods and Applications</a>.</li>
-		<li type="disc"> [Reviewer] WACV 2022 Workshop on Dealing with Novelty in Open Worlds.</li>
+		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
   <h4>Journal Reviewer</h4>
