--- a/index.html
+++ b/index.html
@@ -154,73 +154,73 @@
 	
 <p>
 	<strong>[PAKDD'22]</strong> Layer Adaptive Deep Neural Networks for Out-of-distribution Detection. <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
-	Haoliang Wang, <font color=a92b13>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
+	Haoliang Wang, <font color=red>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
 	<em>The 26th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>, 2022
 </p>
 
 <p>
 	<strong>[AAAI'21]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
-	Krishnateja Killamsetty, Changbin Li, <font color=a92b13>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
+	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
 	<em>AAAI Conference on Artificial Intelligence</em>, 2022, <em>and</em> <em>NeurIPS Workshop on MetaLearn</em>, 2021
 </p>
 
 <p>
 	<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
+	<font color=red>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2021
 </p>
 
 <p>
 	<strong>[ICBC'21]</strong> VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning. <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">PDF</a></br>
-	Feng Mi, Zhuoyi Wang, <font color=a92b13>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
+	Feng Mi, Zhuoyi Wang, <font color=red>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency</em>, 2021
 </p>
 
 <p>
 	<strong>[WWW'21]</strong> CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining. <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
-	Zhuoyi Wang, Yuqiao Chen, <font color=a92b13>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
+	Zhuoyi Wang, Yuqiao Chen, <font color=red>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
 	<em>In Proceedings of the ACM International World Wide Web Conference</em>, 2021
 </p>
 
 <p>
 	<strong>[ArXiv preprint]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 	<em>ArXiv preprint, 2009.12675v2</em>, 2020
 </p>
 
 <p>
 	<strong>[ICDM'20]</strong> A Primal-Dual Subgradient Approach for Fair Meta Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2020
 </p>
 
 <p>
 	<strong>[ICKG'20]</strong> Fair Meta-Learning for Few-Shot Classification. <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
+	<font color=red>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
 
 <p>
 	<strong>[ICKG'20]</strong> Unfairness Discovery and Prevention for Few-Shot Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
+	<font color=red>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
 
 <p>
 	<strong>[ICDM'19]</strong> Rank-Based Multi-task Learning for Fair Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Feng Chen<br/>
+	<font color=red>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2019
 </p>
 
 <p>
 	<strong>[Development]</strong> CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
-	Jingjing Li, Lianjie Miao, <font color=a92b13>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
+	Jingjing Li, Lianjie Miao, <font color=red>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
 	Development, 147-173, 2017 
 </p>
 
 <p>
 	<strong>[Development]</strong> Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">PDF</a></br>
-	<font color=a92b13>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
+	<font color=red>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
 	Development, 141(2):281-95, 2014
 </p>
 
@@ -234,7 +234,7 @@
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
 		<li type="disc"> [TPC Member] International Congress on Blockchain and Applications (BLOCKCHAIN) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=a92b13>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2022.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2022.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining  (SDM) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
@@ -244,9 +244,9 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
-		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
-		<li type="disc"> [<font color=a92b13>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical Artificial Intelligence: Methods and Applications</a>.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical Artificial Intelligence: Methods and Applications</a>.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
@@ -264,26 +264,26 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">11/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=a92b13>Invited talk</font>).</li>
-		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">11/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
-		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=a92b13>Invited talk</font>).</li>
-		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (<font color=a92b13>Invited talk</font>).</li>
-		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
+		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (<font color=red>Invited talk</font>).</li>
+		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
 		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
 		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China.</li>
 		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster presentation).</li>
-		<li type="disc">04/2015: Shaker High School, Latham NY, USA (<font color=a92b13>Invited talk</font>).</li>
+		<li type="disc">04/2015: Shaker High School, Latham NY, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
 	</ul>
 
 <h2>Teaching</h2>
   <h4>The State University of New York at Albany</h4>
 	<ul>
-		<li type="disc">Spring 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
-		<li type="disc">Fall 2022, Spring 2022, <font color=a92b13>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
+		<li type="disc">Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
+		<li type="disc">Fall 2022, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
 		<li type="disc">Spring 2019, Fall 2018, Spring 2018, Teaching Assistant, ICSI 500 Operating Systems. </li>
 		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
 		<li type="disc">Fall 2016, Spring 2016, Fall 2015, Teaching Assistant, ICSI 201 Introduction of Computer Science. </li>
@@ -293,7 +293,7 @@
 		<li type="disc">Summer 2021, Teaching Assistant, CS 6385 Algorithmic Aspects of Telecommunication Networks. </li>
 		<li type="disc">Summer 2021, Teaching Assistant, CS 4365 Artificial Intelligence. </li>
 		<li type="disc">Summer 2021, Lab Instructor, CS 1136 Computer Science Laboratory. </li>
-		<li type="disc">Fall 2019, <font color=a92b13>Co-Instructor</font>, <a href="https://personal.utdallas.edu/~fxc190007/courses/6364/">CS 6364 Artificial Intelligence</a>. </li>
+		<li type="disc">Fall 2019, <font color=red>Co-Instructor</font>, <a href="https://personal.utdallas.edu/~fxc190007/courses/6364/">CS 6364 Artificial Intelligence</a>. </li>
 		<li type="disc">Fall 2019, Teaching Assistant, CS 6301 Convolutional Neural Network. </li>
 	</ul>
   <h4>Albany Medical College</h4>
