--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
 <h2>Publications</h2>
 
 <p>
+	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
+	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
+	<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
+</p>
+	
+<p>
 	<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
 	<font color=red>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
@@ -163,6 +169,12 @@
 	<strong>[AAAI'21]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
 	<em>AAAI Conference on Artificial Intelligence</em>, 2022, <em>and</em> <em>NeurIPS Workshop on MetaLearn</em>, 2021
+</p>
+
+<p>
+	<strong>[NeurIPS’21-W]</strong>A Reweighted Meta Learning Framework for Robust Few Shot Learning. </br>
+	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
+	<em>NeurIPS Workshop on Meta-Learning (MetaLearn)</em>, 2021
 </p>
 
 <p>
