--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
 	    <li type="circle">[11/2022] I will serve as a reviewer for the International Conference On Intelligent Computing 2023.</li>
 	    <li type="circle">[11/2022] I will serve as a reviewer for WACV 2023 Workshop on DNOW.</li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg CO </li>
