--- a/index.html
+++ b/index.html
@@ -278,7 +278,9 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">11/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">04/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
