--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
 <h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">04/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">01/2023 (scheduled):  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
