--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[12/2022] I will serve as a PC member for IJCAI 2023.</li>
 	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
 	    <li type="circle">[11/2022] I will serve as a reviewer for the International Conference On Intelligent Computing 2023.</li>
 	    <li type="circle">[11/2022] I will serve as a reviewer for WACV 2023 Workshop on DNOW.</li>
@@ -243,6 +244,7 @@
 <h2>Academic Services</h2>
   <h4>Conference</h4>
     	<ul>
+		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
 		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC) 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
