--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
     <ul>
 	    <li type="circle">[12/2022] I will serve as a PC member for IJCAI 2023.</li>
 	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
-	    <li type="circle">[11/2022] I will serve as a reviewer for the International Conference On Intelligent Computing 2023.</li>
+	    <li type="circle">[11/2022] I will serve as a reviewer for ICIC 2023.</li>
 	    <li type="circle">[11/2022] I will serve as a reviewer for WACV 2023 Workshop on DNOW.</li>
+	    <li type="circle">[11/2022] I was invited to give an academic talk by the Millersville University, Millersville PA </li>
+	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Alabama at Birmingham, Birmingham AL </li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg CO </li>
 	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
 	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
