--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[12/2022] I will serve as a PC member for ACM SIGKDD 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a TPC membner for NCIT 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a PC member for IJCAI 2023.</li>
 	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
@@ -250,7 +251,7 @@
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2022.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2023.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
