--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 	
 <p>
 	<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
-	<font color=red>Chen Zhao*</font>, Feng Mi*, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
+	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
 </p>
 	
