--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
 <h2>Publications</h2>
 
 <p>
+	<strong>[ArXiv preprint]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
+	Dennis Melamed, Cameron Johnson, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp<br/>
+	<em>ArXiv preprint, 2212.13876</em>, 2022
+</p>	
+
+<p>
 	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
 	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
 	<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
