--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    <li type="circle">[12/2022] I will serve as a PC member for ACM SIGKDD 2023. </li>
+	    <li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
+	    <li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a TPC membner for NCIT 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a PC member for IJCAI 2023.</li>
 	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
@@ -292,7 +293,7 @@
 <h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">04/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">01/2023 (scheduled):  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">01/2023  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
