--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
 
 
 <h2>Publications</h2>
+	
+<p>
+	<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
+	Feng Mi, <font color=red>Chen Zhao</font>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham<br/>
+	<em>ArXiv preprint, 2301.08824</em>, 2023
+</p>
 
 <p>
 	<strong>[ArXiv preprint]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
