--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
+	    <li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS </li>
 	    <li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a TPC membner for NCIT 2023. </li>
@@ -153,6 +155,12 @@
 
 
 <h2>Publications</h2>
+
+<p>
+	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. </br>
+	Xujiang Zhao, Xuchao Zhang, <font color=red>Chen Zhao</font>, Jin-Hee Cho, Lance Kaplan, Dong Hyun Jeong, Audun Jøsang, Haifeng Chen, Feng Chen<br/>
+	<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
+</p>
 	
 <p>
 	<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
@@ -299,6 +307,7 @@
 <h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">04/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">02/2023  University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">01/2023  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
