--- a/index.html
+++ b/index.html
@@ -102,55 +102,9 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	    <li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
-	    <li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS </li>
+	    <li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
 	    <li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
 	    <li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
-	    <li type="circle">[12/2022] I will serve as a TPC membner for NCIT 2023. </li>
-	    <li type="circle">[12/2022] I will serve as a PC member for IJCAI 2023.</li>
-	    <li type="circle">[11/2022] One paper was accepted by AAAI Workshop 2023. </li>
-	    <li type="circle">[11/2022] I will serve as a reviewer for ICIC 2023.</li>
-	    <li type="circle">[11/2022] I will serve as a reviewer for WACV 2023 Workshop on DNOW.</li>
-	    <li type="circle">[11/2022] I was invited to give an academic talk by the Millersville University, Millersville PA </li>
-	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Alabama at Birmingham, Birmingham AL </li>
-	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Central Missouri, Warrensburg CO </li>
-	    <li type="circle">[11/2022] I was invited to give an academic talk by the University of Texas at Dallas, Richardson TX </li>
-	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of Knowledge-based Systems (KBS).</li>
-	    <li type="circle">[09/2022] Our workshop proposal (UDM-AAAI) was accepted at AAAI 2023. I will serve as the workshop chair.</li>
-	    <li type="circle">[09/2022] I will serve as a reviwer for the journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI).</li>
-	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of Springer Machine Learning (MACH).</li>
-	    <li type="circle">[08/2022] I will serve as a reviwer for the journal of IEEE Transactions on Software Engineering (TSE).</li>
-	    <li type="circle">[07/2022] I am selected as a mentor at the Undergraduate Consortium at KDD 2022.</li>
-	    <li type="circle">[07/2022] I will serve as a reviewer for WACV 2023.</li>
-	    <li type="circle">[07/2022] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
-	    <li type="circle">[06/2022] I will serve as a Editorial Board Member of American Journal of Data Mining and Knowledge Discovery (AJDMKD) 2022-2024.</li>
-	    <li type="circle">[05/2022] I will serve as a PC member for CIKM 2022.</li>
-	    <li type="circle">[05/2022] I was invited to give an academic talk by Tianjin University, Smart Society and Big Data Intelligence Lab </li>
-	    <li type="circle">[05/2022] One paper was accepted by ACM SIGKDD 2022 (research track). </li>
-	    <li type="circle">[04/2022] Our workshop proposal (EAI-KDD) was accepted at ACM SIGKDD 2022. I will serve as the workshop chair.</li>
-	    <li type="circle">[03/2022] I will serve as a PC member for IEEE ICDM 2022.</li>
-	    <li type="circle">[02/2022] I will serve as a PC member for IEEE BigData 2022.</li>
-	    <li type="circle">[02/2022] I will serve as a TPC member for BLOCKCHAIN'22. </li>
-	    <li type="circle">[01/2022] I will serve as a PC member for AutoML Conference 2022. </li>
-	    <li type="circle">[01/2022] One paper was accepted by PAKDD 2022. </li>
-	    <li type="circle">[01/2022] I will serve as a reviewer for the journal of Frontiers in Big Data. </li>
-<!-- 	    <li type="circle">[12/2021] One paper was accepted by AAAI 2022. </li>
-	    <li type="circle">[11/2021] I was invited to give an academic talk by Tsinghua University, AI TIME </li>
-	    <li type="circle">[11/2021] I will serve as a PC member for ACM SIGKDD 2022. </li>
-	    <li type="circle">[11/2021] I will serve as an adjunct lecturer in the deparment of Information Science at UAlbany. </li>
-	    <li type="circle">[10/2021] I will serve as a PC member for AAAI 2022.</li>
-	    <li type="circle">[10/2021] I will serve as a reviewer for WACV 2022 Workshop on DNOW.</li>
-	    <li type="circle">[10/2021] One paper was accepted by NeurIPS 2021 Workshop on Meta-Learning.</li>
-	    <li type="circle">[09/2021] I will serve as a reviewer for NeurIPS 2021 Workshop on Meta-Learning .</li>
-	    <li type="circle">[09/2021] I will serve as a PC member for SDM 2022. </li>
-	    <li type="circle">[09/2021] I will serve as a PC member for IEEE BigData 2021.</li>
-	    <li type="circle">[08/2021] I will serve as a PC member for WSDM 2022. </li>
-	    <li type="circle">[08/09/2021] I was officially hooded as a Ph.D.</li>
-	    <li type="circle">[07/05/2021] I successfully passed my doctoral defense!</li>
-	    <li type="circle">[06/2021] I will serve as a PC member for IEEE ICDM 2021. </li>
-	    <li type="circle">[05/2021] One paper was accepted by ACM SIGKDD 2021 (research track). </li>
-	    <li type="circle">[02/2021] One paper was accepted by ICBC 2021.</li>
-	    <li type="circle">[01/2021] One paper was accepted by WWW 2021.</li>
-	    <li type="circle">[08/2020] One paper was accepted by ICDM 2020.</li> -->
     </ul><br>
 
 
@@ -306,7 +260,7 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">04/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">02/2023  University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">01/2023  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
