--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <h2>Teaching</h2>
   <h4>The State University of New York at Albany</h4>
 	<ul>
-		<li type="disc">Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
+		<li type="disc">Spring 2023, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
 		<li type="disc">Fall 2022, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
 		<li type="disc">Spring 2019, Fall 2018, Spring 2018, Teaching Assistant, ICSI 500 Operating Systems. </li>
 		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
