--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Wavo TX. </li>
 	    <li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
 	    <li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
 	    <li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
@@ -261,6 +262,7 @@
 <h2>Academic Talks</h2>
 	<ul>
 		<li type="disc">03/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023 (scheduled):  Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">02/2023  University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">01/2023  University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
